<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_m_export"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_m_export"/>
    <item
        android:id="@+id/action_m_del"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_del"/>
    <item 
        android:id="@+id/action_m_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_m_all"/>
    <item 
        android:id="@+id/action_m_opp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_m_opp"/>

</menu>
