<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:background="#33B5E5"
    	android:orientation="horizontal">
        <ImageView 
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:background="#33B5E5"
    	android:orientation="horizontal">
        <TextView 
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/version"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="20dp"
    	android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:clickable="true"
            android:onClick="auther"
            android:text="@string/author"/>
    </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="bottom"
    	android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/oicq"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_gravity="bottom"
    	android:gravity="center">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#888888"
            android:text="@string/copy_right"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
